[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.mypy]
files = [
  "src",
  "tests",
]
python_version = "3.8"

# check_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_untyped_decorators = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# ignore_missing_imports = true
# no_implicit_optional = true
# no_implicit_reexport = true
# show_column_numbers = true
# show_error_codes = true
# show_error_context = true
# show_none_errors = true
# strict_equality = true
# strict_optional = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unused_configs = true
# warn_unused_ignores = true

[tool.pytest.ini_options]
addopts = [
  "--black",
  "--tb=short",
  "--cov=result",
  "--cov=tests",
  "--cov-report=term",
  "--cov-report=xml",
]

testpaths = [
  "tests",
]

[tool.black]
line-length = 99
target_version = ['py38']

[tool.isort]
line_length = 99
profile = "black"
py_version = 38
