[metadata]
name = configpile
version = attr: configpile.__version__
description = Library that collects configuration settings from command line parameters, configuration files and environment variables
long_description = file: README.rst
keywords = configuration
author = Denis Rosset
author_email = denis@denisrosset.com
maintainer = Denis Rosset (https://github.com/denisrosset)
url = https://github.com/denisrosset/configpile
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = True
install_requires =
    typing_extensions;python_version<'3.10'
package_dir =
    =src
packages = find:
python_requires = >=3.8
zip_safe = True

[options.packages.find]
where = src

[options.package_data]
configpile = py.typed
